--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,4 +48,5 @@ jobs:
 
       - run:
           name: Send to CodeCov
-          command: bash <(curl -s https://codecov.io/bash)
+          command: curl -Os https://uploader.codecov.io/latest/linux/codecov chmod +x codecov ./codecov
+#          command: bash <(curl -s https://codecov.io/bash)
