--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
+      - run: mvn clean install
       - run: mvn dependency:go-offline
 
       - save_cache:
@@ -48,5 +49,5 @@ jobs:
 
       - run:
           name: Send to CodeCov
-          command: curl -Os https://uploader.codecov.io/latest/linux/codecov chmod +x codecov ./codecov
-#          command: bash <(curl -s https://codecov.io/bash)
+#          command: curl -Os https://uploader.codecov.io/latest/linux/codecov chmod +x codecov ./codecov
+          command: bash <(curl -s https://codecov.io/bash)
