--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: mvn clean install
+
       - run: mvn dependency:go-offline
 
       - save_cache:
@@ -42,6 +42,7 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests! and gen code coverage
+#      - run: mvn clean install
       - run: mvn integration-test
 
       - store_test_results:
@@ -49,5 +50,4 @@ jobs:
 
       - run:
           name: Send to CodeCov
-#          command: curl -Os https://uploader.codecov.io/latest/linux/codecov chmod +x codecov ./codecov
           command: bash <(curl -s https://codecov.io/bash)
