changed src and test directory in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,8 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main</sourceDirectory>
+        <testSourceDirectory>src/test</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
